# csdt2024ki48ilkivdanylo12

./: README.md
client/html/: class__c_display__-members.html  class__c_engine__.html  classes.html  client_8h.html  data_8h.html  engine_8h.html  files.html  framework_8h.html  framework_8h_source.html  functions_enum.html  globals_enum.html  helper_8h.html  opengl_8h.html  opengl_8h_source.html  serial__port_8cpp_source.html  serial__port_8h.html  serial__port_8h_source.html  struct__c_display___1_1s_display_data-members.html  struct__s_init__-members.html  struct__s_object__.js  struct__s_point__.js  struct__s_serial_port__-members.html  struct__s_step__-members.html  struct__s_step__.html  struct__s_update__.js  structvec3f-members.html  targetver_8h_source.html  vec__mat_8h.html  vec__mat__functions_8cpp.html  vec__mat__functions_8cpp_source.html  vec__mat__functions_8h.html  window_8h.html
client/rtf/: refman.rtf
media/: client_server.drawio
server/html/: annotated.html  bootrom_8c_8obj_8d.html  bot_8c_8obj_8d.html  bot_8c_source.html  bot_8h.html  bot_8h.js  bot_8h_source.html  c__sdk__output_8cpp_8obj_8d_source.html  cdc__device_8c_8obj_8d_source.html  classes.html  data_8c.js  data_8c_8obj_8d.html  data_8c_8obj_8d_source.html  data_8h.js  dcd__rp2040_8c_8obj_8d_source.html  dir_05f376a346edd1fcf4b02058fe7a659a.html  (+95 more)
source/pico_server/: CMakeLists.txt  bot.c  bot.h  data.c  data.h  doxyfile  framework.h  game.c  game.h  logic.c  logic.h  main.c  save_load.c  save_load.h  serial_port.c  serial_port.h  server.c  server.h  update.c  update.h
(+776 files in other folders)
